# flutter_cpp_ai

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android/app/src/main/cpp/: CMakeLists.txt  native_math.cpp
android/app/src/main/kotlin/com/samir_ribeiro/flutter_cpp_ai/: MainActivity.kt
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  MathBridge.h  Runner-Bridging-Header.h  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/cpp/: MathOperations.cpp
lib/: app_widget.dart  main.dart
lib/src/bindings/: math_bindings.dart
lib/src/model/: math_connection_type.dart  math_request.dart  math_response.dart
lib/src/service/: math_service.dart
lib/src/ui/helper/: app_theme.dart  number_field.dart  route_generator.dart
lib/src/ui/screen/: home_page.dart  math_page.dart  native_page.dart
native/: CMakeLists.txt
native/include/: math_operations.h
native/src/: math_operations.cpp
test/: widget_test.dart
